--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   my-php-app:
     build: ./
     volumes:
-      - /Users/gokul-mylsami/Desktop/CSI-Task/:/var/www/html/
+      - C:\Users\chand\Desktop\STUDIES\Projects\CSI-Task\:/var/www/html/
     ports:
       - "8000:80"
 
